smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/trait-trailing.smithy
// Parse error at line 8, column 1 near `}\n`: Expected a valid identifier character, but found '}'
namespace com.foo

structure Foo {
  baz: String,

  @deprecated
}
